k8s/media-services/mediamanager/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mediamanager
  namespace: media-services
  labels:
    app: mediamanager
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: mediamanager
